removed height from timetext to fix off-center

--- a/src/App.css
+++ b/src/App.css
@@ -667,7 +667,6 @@ form {
 #timeText {
   font-size : 2vw;
   width: 5vw;
-  height: 50px;
 }
 
 .timerTextAndButtonsContainer {
